# ticketing

./: Fly.toml  README.md
data/: db.sqlite3  ticketing.db
my_django_project/: db.sqlite3  pyproject.toml  requirements.txt
my_django_project/myticket/: asgi.py  settings.py  urls.py  wsgi.py
my_django_project/static/: bug.css
my_django_project/templates/: base.html  home.html  login.html  signup.html  ticket_confirm_delete.html  ticket_detail.html  ticket_form.html  user_profile.html
my_django_project/tickets/: forms.py  models.py  tests.py  views.py
my_django_project/tickets/migrations/: 0001_initial.py  0002_fix_ticket_status_default.py
