[project]
name = "my-django-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Reginald",email = "reginald.jeffersonm@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django (>=6.0.3,<7.0.0)"
]

[tool.poetry]
packages = [{include = "my_django_project", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
